[package]
name = "custom_emojikun"
version = "0.1.0"
authors = ["forest"]

[dependencies]
actix = "0.7"
actix-web = { version="0.7.3", features=["rust-tls"] }
futures = "0.1"
serde_json = "1.0.16"
env_logger = "0.5.9"
reqwest = "0.9.2"
scraper = "0.7.0"
slack-hook = "0.6"
yaml-rust = "0.4.2"
image = "0.20.0"
